New Home page with menus.

--- a/resources/lang/pt-BR.json
+++ b/resources/lang/pt-BR.json
@@ -29,5 +29,6 @@
     "Regards": "Saudações",
     "Reset Password Notification": "Notificação de redefinição de senha",
     "All rights reserved.": "Todos os direitos reservados.",
-    "home": "inicio"
+    "home": "inicio",
+    "importation": "importação"
 }
